--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -14,6 +14,7 @@
     &-container {
         justify-content: center;
         align-items: center;
+        text-align: center;
     }
 
     &-shadow {
@@ -23,7 +24,8 @@
     }
 
     &-logo {
-        margin: 0 1em 0 3em;
+        margin-left: 3.5em;
+        margin-right: 1em;
     }
 
     &-input {
